docs(planned): record approved MCP architecture for AI-agent integration
Update the AI-agent integration design with the architecture approved
after the Phase 0 spike and the SDK/module discussion:

- The MCP server is a new in-repo Maven module lathe-mcp-server (parallel
  to lathe-server), built on the official MCP Java SDK
  (io.modelcontextprotocol.sdk). A separate module isolates the SDK's
  dependency closure (Reactor, dual Jackson, json-schema-validator,
  slf4j) so lathe-server's lean module-info and the editor path are
  untouched.
- Integration is in-process via a thin LatheEngine facade exported from
  lathe-server (qualified export to the MCP module), so MCP tools call
  the same *Future(...) service seam the LSP executeCommand handlers use
  -- one process per agent session, no child JVM and no LSP-over-stdio
  hop. Out-of-process and hand-rolled-transport alternatives are recorded
  as considered and rejected.
- Own launcher lathe-mcp-launcher.sh generated by ServerInstaller.
- Phasing revised: scaffold+facade+Tier 1 edit->verify loop, then
  Tiers 2-3, then streaming/cancellation (leaning on already-shipped
  test-output-streaming / structured-test-results / test-cancel), then
  resources + optional HTTP, then the thin Claude Code LSP plugin, then
  packaging.
- Phase 0 spike documented as done; .lsp.json schema note corrected
  against the live plugins reference; open questions narrowed to JPMS
  placement, protocol-version tracking, and Codex trust markers.

Index entry in design-index.md updated to match.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>